<resources>
	<string name="app_name">Messenger</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_up">Sign Up</string>
	<string name="reset_password">Reset Password</string>
	<string name="don_t_have_an_account">Don\'t have an account?</string>
	<string name="forgot_password">Forgot password?</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm password</string>
	<string name="already_have_an_account">Already have an account?</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>