<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewModel"
			type="com.example.messenger.presentation.viewmodel.SignUpViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".presentation.fragment.SignUpFragment">

		<EditText
			android:id="@+id/email_txt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="250dp"
			android:layout_marginHorizontal="50dp"
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			android:text="@={viewModel.email}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent">
		</EditText>

		<EditText
			android:id="@+id/password_txt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginHorizontal="50dp"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:text="@={viewModel.password}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/email_txt">
		</EditText>

		<EditText
			android:id="@+id/confirm_password_txt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginHorizontal="50dp"
			android:hint="@string/confirm_password"
			android:inputType="textPassword"
			android:text="@={viewModel.confirmPassword}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/password_txt">
		</EditText>

		<Button
			android:id="@+id/sign_up_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="50dp"
			android:layout_marginTop="10dp"
			android:text="@string/sign_up"
			android:onClick="@{_ -> viewModel.signUp()}"
			android:enabled="@{viewModel.isEnabledSignUp}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/confirm_password_txt">
		</Button>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/sign_up_btn">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/already_have_an_account">
			</TextView>

			<TextView
				android:layout_marginStart="2dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_in"
				android:onClick="@{_ -> viewModel.navigateToSignIn()}"
				android:textColor="@color/teal_200">
			</TextView>
		</LinearLayout>

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="@{viewModel.isVisiblyProgressBar}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent">
		</ProgressBar>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>