<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewModel"
			type="com.example.messenger.presentation.viewmodel.SignInViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".presentation.fragment.SignInFragment">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/email_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="250dp"
			android:layout_marginHorizontal="50dp"
			android:hint="@string/email"

			app:boxStrokeErrorColor="@color/black"
			app:boxBackgroundColor="@color/white"
			app:boxBackgroundMode="outline"
			app:endIconMode="clear_text"
			app:startIconDrawable="@drawable/ic_email_24"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/email_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:text="@={viewModel.email}" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/password_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginHorizontal="50dp"
			android:hint="@string/password"

			app:boxStrokeErrorColor="@color/black"
			app:boxBackgroundColor="@color/white"
			app:boxBackgroundMode="outline"
			app:endIconMode="clear_text"
			app:startIconDrawable="@drawable/ic_email_24"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/email_layout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/password_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:text="@={viewModel.password}"/>
		</com.google.android.material.textfield.TextInputLayout>

		<TextView
			android:id="@+id/forgot_password_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/forgot_password"
			android:textColor="@color/teal_200"
			app:layout_constraintEnd_toEndOf="@id/password_layout"
			app:layout_constraintTop_toBottomOf="@id/password_layout">
		</TextView>

		<Button
			android:id="@+id/sign_in_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="50dp"
			android:layout_marginTop="10dp"
			android:text="@string/sign_in"
			android:onClick="@{_ -> viewModel.signIn()}"
			android:enabled="@{viewModel.isEnabledSignIn}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/forgot_password_text">
		</Button>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/sign_in_btn">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/don_t_have_an_account">
			</TextView>

			<TextView
				android:layout_marginStart="2dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up"
				android:onClick="@{_ -> viewModel.navigateToSignUp()}"
				android:textColor="@color/teal_200">
			</TextView>
		</LinearLayout>

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="@{viewModel.isVisiblyProgressBar}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent">
		</ProgressBar>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>